styles: fix notion-collection-card style in dark mode

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -89,7 +89,7 @@
   /*box-shadow: none;*/
   box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
   border-radius: 3px;
-  background: white;
+  /*background: white;*/
 }
 
 .notion-collection-card-cover img {
